# tube_defect_analyzer

./: .gitignore  LICENSE  README.md  analyzer.py  main.py  meta_analysis.py  pyproject.toml
src/: analyzer.py  main.py  ocr_read.py  serialization.py  split_log.py  tube_lot.py
src/analyzer/: analyze_groups.py  analyze_lots.py  analyze_time_diff.py  gen_report.py
