[project]
name = "tube-defect-analyzer"
version = "0.1.0"
description = """This prototype takes a filepath to a scanned defect log
and uses OCR to grab data and analyzes tube defect rates"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paddleocr==3.3.3",
    "paddlepaddle==3.2.0",
]
