[project]
name = "tube-defect-analyzer"
version = "0.1.0"
description = """This prototype takes a filepath to a scanned defect log
and uses OCR to grab data and analyzes tube defect rates"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paddleocr==3.3.3",
    "paddlepaddle==3.2.0",
    "tqdm>=4.67.1",
    "yaspin>=3.4.0",
]
